# rag-pipeline

./: README.md  docker-compose.yml  pyproject.toml  rag.ipynb
docs/: setup.md
services/rag_api/: Dockerfile  pyproject.toml
services/rag_api/src/rag_api/: main.py  schemas.py
services/test_client/: pyproject.toml
services/test_client/src/test_client/: main.py
